# portable_doc_search

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/docsearch/: __init__.py  cli.py  main.py
src/docsearch/core/: config.py  logging.py
src/docsearch/db/: init.py  models.py  session.py
src/docsearch/services/: search.py
src/docsearch/web/static/css/: style.css
src/docsearch/web/static/js/: app.js
src/docsearch/web/templates/: index.html
tests/: test_healthz.py
