[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portable-docsearch"
version = "0.1.0"
description = "Локальный полнотекстовый поиск по PDF/Markdown с FastAPI, SQLite FTS5 и Vue.js"
readme = "README.md"
authors = [{name = "Your Name", email = "you@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "passlib[bcrypt]>=1.7",
  "PyJWT>=2.8",
  "itsdangerous>=2.2",
  "pdfminer.six>=20240706",
  "markdown-it-py>=3.0",
  "typer[all]>=0.12",
  "httpx>=0.27",
  "rich>=13.7",
]

[project.optional-dependencies]
embeddings = [
  "sentence-transformers>=2.2",
  "numpy>=1.26",
]
pymupdf = [
  "PyMuPDF>=1.24",
]

develop = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "coverage>=7.6",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-PyYAML>=6.0.12",
  "requests>=2.31",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "UP", "B", "SIM", "PL"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = []

[tool.coverage.run]
source = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
